--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
 		<!-- #myContent -->
 		<div id="myContent"></div>
 		<div id="contentToWrite" style="display:none">
-			username@SomeWhere ~ $ ssh Mike's Heart<br>
+			username@SomeWhDescription	Resource	Path	Location	Type
+ere ~ $ ssh Mike's Heart<br>
 			Login : Nicole<br>
 			password : *********<br>
 			strange happens.<br>
