修改了爱心的颜色和时间 使用了最终的5张图片 背景和字体颜色确定

--- a/index.html
+++ b/index.html
@@ -36,19 +36,19 @@
 		<!--#Header-->
 		<div id="header" style="opacity:0.85">
 			<div id="title">
-				我们的1000天纪念日
+				Mike and Nicole's Ceremony
 			</div>
 		</div>
 
 		<!-- #myContent -->
 		<div id="myContent"></div>
 		<div id="contentToWrite" style="display:none">
-			username@SomeWhere ~ $ ssh Mike's Heart<br>
+			username@SomeWhere ~ $ <br>
 			Login : Nicole<br>
 			password : *********<br>
 			strange happens.<br>
 			root@Mike ~ #<br>
-			今天,我们在一起已经有1000天了,其中颇多挫折,<br>
+			今天,我们在一起已经有1000天了,颇多挫折,<br>
 			但是最后,我们总算还是能在一起,希望<br>
 			我们一起度过接下来的时光.<br>
 		</div>
@@ -60,15 +60,15 @@
 		<!-- #container -->
 		<div id="container"  >
 			<ul id="myRoundabout">
-		  	<li><img src="images/slide1.jpg" alt=""></li>
-			<li><img src="images/slide2.jpg" alt=""></li>
-			<li><img src="images/slide5.jpg" alt=""></li>
-			<li><img src="images/slide3.jpg" alt=""></li>
-			<li><img src="images/slide4.jpg" alt=""></li>
+		  	<li><img src="images/slide1.png" alt=""></li>
+			<li><img src="images/slide2.png" alt=""></li>
+			<li><img src="images/slide5.png" alt=""></li>
+			<li><img src="images/slide3.png" alt=""></li>
+			<li><img src="images/slide4.png" alt=""></li>
 		  </ul>
 		</div>
 		<script>
-			setTimeout(move, 2050);
+			setTimeout(move, 15000);
 		</script>
   		
   		<!-- #bg -->
@@ -80,14 +80,24 @@
 		<div id="time" >
 			<span id="show"></span>
 			<script type="text/javascript">
-				setTimeout(showTime, 10000);
+				setTimeout(showTime, 54000);
 			</script>
 		</div>
 
 		<!-- #footer-->
 		<div id="footer">
-			copyright@<a style="color: rgb(1, 1, 1);" href="http://mikecoder.net">Mike</a> 2013-5-15 Soochow University
+			Copyright@<a style="color: #5953dc; text-shadow:2px 3px 3px #555; font-family:Microsoft YaHei; " href="http://mikecoder.net">Mike</a> 2013-5-15 Soochow University
 		</div>
-	
+		<!-- 统计代码, 大家可以无视之 -->
+		<script type='text/javascript'>
+		(function() {
+		    var c = document.createElement('script'); 
+		    c.type = 'text/javascript';
+		    c.async = true;
+		    c.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'www.clicki.cn/boot/48111';
+		    var h = document.getElementsByTagName('script')[0];
+		    h.parentNode.insertBefore(c, h);
+		})();
+		</script>
 	</body>
 </html>
