1,初步确定了网页的基本外观,同时也确定了动画效果 2,使用背景图片. 3,主话语区域留白. 4,着手语言.

--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
 		<!-- #myContent -->
 		<div id="myContent"></div>
 		<div id="contentToWrite" style="display:none">
-			username@SomeWhere ~ $ <br>
-			Login : Nicole<br>
-			password : *********<br>
-			strange happens.<br>
-			root@Mike ~ #<br>
-			今天,我们在一起已经有1000天了,颇多挫折,<br>
-			但是最后,我们总算还是能在一起,希望<br>
-			我们一起度过接下来的时光.<br>
+				bhaiuwhdiwauhdawidhwiadh<br>
+				bauygfuyagfwagfawfgauwfgwaufgwa<br>
+				icsagfiasgfiagfiayfgaigfiwaufgiawufgiuwafgi<br>
+				aiufgiawfgiawf<br>
+				asgiyagiaygfiwaf<br>
+				uhaguyagfuyagfua<br>
+				aihfgaeuyfgaywfgwauf<br>
+				ashfiuawgfiawufhgiwau<br>
 		</div>
 		<script>
 			writeContent(true);
@@ -80,13 +80,16 @@
 		<div id="time" >
 			<span id="show"></span>
 			<script type="text/javascript">
-				setTimeout(showTime, 54000);
+				setTimeout("showTime()", 40000);
 			</script>
 		</div>
 
 		<!-- #footer-->
 		<div id="footer">
-			Copyright@<a style="color: #5953dc; text-shadow:2px 3px 3px #555; font-family:Microsoft YaHei; " href="http://mikecoder.net">Mike</a> 2013-5-15 Soochow University
+		Copyright@<a style="color: #CCFF99; text-shadow:2px 3px 3px #222; font-family:Microsoft YaHei; " href="http://mikecoder.net">Mike</a> 2013-5-15 Soochow University<br>
+		Inspired by <a style="color: #CCFF99; text-shadow:2px 3px 3px #222; font-family:Microsoft YaHei; " href="http://www.openrise.com/lab/FlowerPower/">FlowerPower</a> project.
+		Code at <a style="color: #CCFF99; text-shadow:2px 3px 3px #222; font-family:Microsoft YaHei; " href="https://github.com/MikeCoder/1000days">Github</a>
+		 
 		</div>
 		<!-- 统计代码, 大家可以无视之 -->
 		<script type='text/javascript'>
