--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
 
 	</head>
 
-	<body onLoad="makesnake();">
+	<body>
+		<script type="text/javascript">
+			setTimeout(makesnake, 42000);
+		</script>
 		<!--#Header-->
 		<div id="header" style="opacity:0.85">
 			<div id="title">
@@ -43,14 +46,16 @@
 		<!-- #myContent -->
 		<div id="myContent"></div>
 		<div id="contentToWrite" style="display:none">
-				bhaiuwhdiwauhdawidhwiadh<br>
-				bauygfuyagfwagfawfgauwfgwaufgwa<br>
-				icsagfiasgfiagfiayfgaigfiwaufgiawufgiuwafgi<br>
-				aiufgiawfgiawf<br>
-				asgiyagiaygfiwaf<br>
-				uhaguyagfuyagfua<br>
-				aihfgaeuyfgaywfgwauf<br>
-				ashfiuawgfiawufhgiwau<br>
+				一时间不知道从哪说起,           你曾说我们两在一起就是缘分,<br>
+				确实,我们的相遇并不是那么符合标准程序,有太多种可<br>
+				能我们的生活将没有交集.但是事实却是,在一个神奇的<br>
+				地点我们认识了彼此.曾经以为生命中不经意的相逢，<br>
+				却造就一生中无法去忘记.<br>
+				理想的爱情,不是两个人四目而视,而是两个人同时看着<br>
+				一个方向.希望,我们不会成为彼此的绊脚石,而是成为双<br>
+				方前进的动力.<br>
+				在接下来的人生里,共同面对可能的困难,一路走到人生<br>
+				的尽头.<br>
 		</div>
 		<script>
 			writeContent(true);
@@ -73,7 +78,7 @@
   		
   		<!-- #bg -->
 		<div id="bg">
-			<canvas id="garden"></canvas>
+			<canvas id="garden">你的浏览器过时了!试试火狐吧!</canvas>
 		</div>
 
 		<!-- #time -->
