1,比较靠后的一次更新,将图片格式换为jpg 2,主体流程确定 3,等同学测试之后,就等1000天了. 4,Mike at 4-23

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>1000天纪念日</title>
+		<title>Our's Love</title>
 		<meta name="author" content="Mike">
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		
@@ -47,15 +47,20 @@
 		<div id="myContent"></div>
 		<div id="contentToWrite" style="display:none">
 				一时间不知道从哪说起,           你曾说我们两在一起就是缘分,<br>
-				确实,我们的相遇并不是那么符合标准程序,有太多种可<br>
-				能我们的生活将没有交集.但是事实却是,在一个神奇的<br>
-				地点我们认识了彼此.曾经以为生命中不经意的相逢，<br>
-				却造就一生中无法去忘记.<br>
-				理想的爱情,不是两个人四目而视,而是两个人同时看着<br>
-				一个方向.希望,我们不会成为彼此的绊脚石,而是成为双<br>
-				方前进的动力.<br>
-				在接下来的人生里,共同面对可能的困难,一路走到人生<br>
-				的尽头.<br>
+				en alksjhfiuahfiuwafhwaufhawfhuwiafhiuwafhawiufhaiwuf<br>
+				en alksjhfiuahfiuwafhwaufhawfhuwiafhiuwafhawiufhaiwuf<br>
+				en alksjhfiuahfiuwafhwaufhawfhuwiafhiuwafhawiufhaiwuf<br>
+				en alksjhfiuahfiuwafhwaufhawfhuwiafhiuwafhawiufhaiwuf<br>
+				en alksjhfiuahfiuwafhwaufhawfhuwiafhiuwafhawiufhaiwuf<br>
+				en alksjhfiuahfiuwafhwaufhawfhuwiafhiuwafhawiufhaiwuf<br>
+				en alksjhfiuahfiuwafhwaufhawfhuwiafhiuwafhawiufhaiwuf<br>
+				en alksjhfiuahfiuwafhwaufhawfhuwiafhiuwafhawiufhaiwuf<br>
+				en alksjhfiuahfiuwafhwaufhawfhuwiafhiuwafhawiufhaiwuf<br>
+				en alksjhfiuahfiuwafhwaufhawfhuwiafhiuwafhawiufhaiwuf<br>
+				en alksjhfiuahfiuwafhwaufhawfhuwiafhiuwafhawiufhaiwuf<br>
+				
+				en alksjhfiuahfiuwafhwaufhawfhuwiafhiuwafhawiufhaiwuf<br>
+				en alksjhfiuahfiuwafhwaufhawfhuwiafhiuwafhawiufhaiwuf<br>
 		</div>
 		<script>
 			writeContent(true);
@@ -65,11 +70,11 @@
 		<!-- #container -->
 		<div id="container"  >
 			<ul id="myRoundabout">
-		  	<li><img src="images/slide1.png" alt=""></li>
-			<li><img src="images/slide2.png" alt=""></li>
-			<li><img src="images/slide5.png" alt=""></li>
-			<li><img src="images/slide3.png" alt=""></li>
-			<li><img src="images/slide4.png" alt=""></li>
+		  	<li><img src="images/slide1.jpg" alt=""></li>
+			<li><img src="images/slide2.jpg" alt=""></li>
+			<li><img src="images/slide5.jpg" alt=""></li>
+			<li><img src="images/slide3.jpg" alt=""></li>
+			<li><img src="images/slide4.jpg" alt=""></li>
 		  </ul>
 		</div>
 		<script>
