--- a/index.html
+++ b/index.html
@@ -1,16 +1,12 @@
 <html>
 	<head>
-		<title>Our's Love</title>
+		<title>Ours Love</title>
 		<meta name="author" content="Mike">
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		
-		<link rel="stylesheet" href="css/button.css" type="text/css" media="all">
 		<link rel="stylesheet" href="css/style.css" type="text/css" media="all">
-		<link rel="stylesheet" href="css/jquery-ui-1.css" type="text/css">
 		
 		<!--导库-->
 		<script type="text/javascript" src="jquery/jquery.js" ></script>
-		<script type="text/javascript" src="jquery/jquery-ui.js"></script>
 		<!-- 图片幻灯片效果-->
 		<script type="text/javascript" src="js/roundabout.js"></script>
 		<script type="text/javascript" src="js/roundabout_shapes.js"></script>
