--- a/index.html
+++ b/index.html
@@ -24,8 +24,6 @@
 		<script type="text/javascript" src="js/time.js"></script>
 		<!-- 设置文字跟随鼠标 -->
 		<script type="text/javascript" src="js/makesnake.js"></script>
-
-
 	</head>
 
 	<body>
@@ -35,30 +33,29 @@
 		<!--#Header-->
 		<div id="header" style="opacity:0.85">
 			<div id="title">
-				Mike and Nicole's Ceremony
+				Mike and Nicole's Love Page
 			</div>
 		</div>
 
 		<!-- #myContent -->
 		<div id="myContent"></div>
 		<div id="contentToWrite" style="display:none">
-				一时间不知道从哪说起,           你曾说我们两在一起就是缘分,<br>
-				en alksjhfiuahfiuwafhwaufhawfhuwiafhiuwafhawiufhaiwuf<br>
-				en alksjhfiuahfiuwafhwaufhawfhuwiafhiuwafhawiufhaiwuf<br>
-				en alksjhfiuahfiuwafhwaufhawfhuwiafhiuwafhawiufhaiwuf<br>
-				en alksjhfiuahfiuwafhwaufhawfhuwiafhiuwafhawiufhaiwuf<br>
-				en alksjhfiuahfiuwafhwaufhawfhuwiafhiuwafhawiufhaiwuf<br>
-				en alksjhfiuahfiuwafhwaufhawfhuwiafhiuwafhawiufhaiwuf<br>
-				en alksjhfiuahfiuwafhwaufhawfhuwiafhiuwafhawiufhaiwuf<br>
-				en alksjhfiuahfiuwafhwaufhawfhuwiafhiuwafhawiufhaiwuf<br>
-				en alksjhfiuahfiuwafhwaufhawfhuwiafhiuwafhawiufhaiwuf<br>
-				en alksjhfiuahfiuwafhwaufhawfhuwiafhiuwafhawiufhaiwuf<br>
-				en alksjhfiuahfiuwafhwaufhawfhuwiafhiuwafhawiufhaiwuf<br>
-				
-				en alksjhfiuahfiuwafhwaufhawfhuwiafhiuwafhawiufhaiwuf<br>
-				en alksjhfiuahfiuwafhwaufhawfhuwiafhiuwafhawiufhaiwuf<br>
+				一时间不知道从哪说起,         <br>
+				真爱来了，我们要好好把握。不管面临多大的压力，<br>
+				不管前面的路如何崎岖.<br>
+				不管经历过什么,我仍坚信最浪漫的事就是和<br>
+				你一起慢慢变老.<br>
+				还记得否,曾经的点点滴滴，从相识到现在，<br>
+				从冷漠到关心,从谢绝到依赖，从生疏到相爱,<br>
+				一切似乎都是那么遥远,又似乎那么触手可及.<br>
+				正如某人说的那样,但求岁月静好,现世安稳.<br>
+				一生守候不是一句简单而苍白的山盟海誓，<br>
+				而是无数个平淡的日子同舟共济，相濡以沫.<br>
+				相信右下角的计时器,将永远继续下去,直至数据溢出.<br>
+				<br><br>
+				-----------------------Just for You, Nicole<br>
 		</div>
-		<script>
+		<script type="text/javascript">
 			writeContent(true);
 		</script>
 		</div>
@@ -73,13 +70,13 @@
 			<li><img src="images/slide4.jpg" alt=""></li>
 		  </ul>
 		</div>
-		<script>
+		<script type="text/javascript">
 			setTimeout(move, 15000);
 		</script>
   		
   		<!-- #bg -->
 		<div id="bg">
-			<canvas id="garden">你的浏览器过时了!试试火狐吧!</canvas>
+			<canvas id="garden"><c style="color: #FFF; text-shadow:2px 3px 3px #222; font-family:Microsoft YaHei; font-size:50px" >你的浏览器过时了,试试火狐吧!</c></canvas>
 		</div>
 
 		<!-- #time -->
